--- a/_site.yml
+++ b/_site.yml
@@ -7,6 +7,10 @@ navbar:
   right:
     - text: "Home"
       href: index.html
-    - text: "About"
-      href: about.html
+    - text: "Experience"
+      href: experience.html
+    - text: "Extracurriculars"
+      href: extra.html
+    - text: "Projects"
+      href: projects.html
 output: distill::distill_article
