--- a/_site.yml
+++ b/_site.yml
@@ -1,7 +1,8 @@
 name: "."
-title: "Courtney Rose"
+title: "Journey to a Biostatistician"
+theme: theme.css
 description: |
-  Courtney Rose
+  "Courtney Rose"
 output_dir: "docs"
 navbar:
   right:
@@ -10,7 +11,12 @@ navbar:
     - text: "Experience"
       href: experience.html
     - text: "Extracurriculars"
-      href: extra.html
+      menu: 
+      - text: "School related"
+        href: school_related.html
+      - text: "Non school related"
+        href: outside.html
     - text: "Projects"
       href: projects.html
 output: distill::distill_article
+
