--- a/_site.yml
+++ b/_site.yml
@@ -18,5 +18,7 @@ navbar:
         href: outside.html
     - text: "Projects"
       href: projects.html
+    - text: "Connect with me"
+      href: about.html
 output: distill::distill_article
 
